#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-25
2017-01-28 Mikhail S. Dubrovin
- DCConfigParameters.py - set default calib repository to /reg/d/psdm/detector/calib

Tag: V00-03-24
2017-01-17 Mikhail S. Dubrovin
- DCBase, DCRange, DCType - add protection at h5 file input

Tag: V00-03-23
2017-01-13 Mikhail S. Dubrovin
- dcs and DCMethods - extend CLI to implicitly specified hdf5 file name

Tag: V00-03-22
2017-01-09 Mikhail S. Dubrovin
- GeometryAccess.py - fix self-documentation

Tag: V00-03-21
2017-01-04 Mikhail S. Dubrovin
- CalibParsStore, CalibParsBaseJungfrauV1 - add support for Jungfrau

Tag: V00-03-20
2016-12-19 Christopher O'Grady
- Add Jungfrau to list of area detectors

Tag: V00-03-19
2016-12-08 Mikhail S. Dubrovin
- GenericCalibPars.constants(...) - return default constants if dcs is None

Tag: V00-03-18
2016-12-01 Mikhail S. Dubrovin
- CalibParsStore.py - fix issue with non-defined attibute self.tsec

Tag: V00-03-17
2016-11-23 Jacob Scott and Christopher O'Grady
- add h5constants.py to persist hierarchy of dictionaries in a calib-dir hdf5 file

Tag: V00-03-16
2016-11-22 Mikhail S. Dubrovin
- GeometryAccess - add default constructor and load_pars_from_str method
- in DCVersion.print_obj - switch to formatted print for str/text constants

Tag: V00-03-15
2016-11-21 Mikhail S. Dubrovin
- DCMethods - add methods test_*_file()

Tag: V00-03-14
2016-11-18 Mikhail S. Dubrovin
- DCMethods - add *_file(...,fname,...) for all procedures

Tag: V00-03-13
2016-11-18 Mikhail S. Dubrovin
- dcs - add/get DCS geometry constants from/to the text file
- DCMethods - add evt_to_tsec, test_add_text