@@ -25,8 +25,8 @@ Usage::
     fname = o.calib_file_name()      # e.g., epix100a-3925868555.h5
     fdir  = o.calib_file_dir()       # e.g., /reg/neh/home4/dubrovin/LCLS/rel-calib/calib
     fpath = o.calib_file_path()      # e.g., /reg/neh/home4/dubrovin/LCLS/rel-calib/calib/epix100a/epix100a-3925868555.h5
-    fdir  = o.calib_file_dir_repo()  # e.g., /reg/g/psdm/detector/calib/epix100a/
-    fpath = o.calib_file_path_repo() # e.g., /reg/g/psdm/detector/calib/epix100a/epix100a-3925868555.h5
+    fdir  = o.calib_file_dir_repo()  # e.g., /reg/d/psdm/detector/calib/epix100a/
+    fpath = o.calib_file_path_repo() # e.g., /reg/d/psdm/detector/calib/epix100a/epix100a-3925868555.h5
     o.print_attrs() # print attributes
     o.log_attrs()  # dump attributes in the logger
     s = o.str_attrs() # returns a string of attributes
@@ -162,6 +162,12 @@ class DCFileName() :
         return self._detname
 
 
+    def path_to_data(self) :
+        """Returns path to data from env 'SIT_PSDM_DATA' else '/reg/d/psdm'"""
+        path_data = os.environ.get('SIT_PSDM_DATA') # '/reg/d/psdm'
+        return '/reg/d/psdm' if path_data is None else path_data
+
+
     def calib_file_dir(self) :
         """Returns file directory name, ex.: .../calib/epix100a/"""
         if self._calibdir is None : return None
@@ -169,8 +175,12 @@ class DCFileName() :
 
 
     def calib_file_dir_repo(self) :
-        """Returns repository directory, ex.: /reg/g/psdm/detector/calib/epix100a/"""
-        return '%s/%s' % (cp.dir_repo.value(), self._dettype)
+        """Returns repository directory, ex.: /reg/d/psdm/detector/calib/epix100a/"""
+        path_data = self.path_to_data()
+        if path_data is None :
+            return os.path.join(cp.dir_repo.value(), self._dettype)
+        else :
+            return os.path.join(path_data, 'detector/calib', self._dettype)
 
 
     def calib_file_name(self) :
@@ -181,12 +191,12 @@ class DCFileName() :
     def calib_file_path(self) :
         """Returns path to the file, ex.: .../calib/epix100a/epix100a-3925868555.h5"""
         if self._calibdir is None : return None
-        else : return '%s/%s/%s.%s' % (self._calibdir, self._dettype, self._detname, self.fname_ext)
+        else : return '%s/%s' % (self.calib_file_dir(), self.calib_file_name())
 
 
     def calib_file_path_repo(self) :
-        """Returns path to the file in repository, ex.: /reg/g/.../calib/epix100a/epix100a-3925868555.h5"""
-        return '%s/%s/%s.%s' % (cp.dir_repo.value(), self._dettype, self._detname, self.fname_ext)
+        """Returns path to the file in repository, ex.: /reg/d/.../calib/epix100a/epix100a-3925868555.h5"""
+        return '%s/%s' % (self.calib_file_dir_repo(), self.calib_file_name())
 
 
     def make_path_to_calib_file(self, depth=2, mode=0775) :
