@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-26
+2017-01-30 Mikhail S. Dubrovin
+- DCFileName.py - retrieve path like /reg/d/psdm through the env SIT_PSDM_DATA if available
+
 Tag: V00-03-25
 2017-01-28 Mikhail S. Dubrovin
 - DCConfigParameters.py - set default calib repository to /reg/d/psdm/detector/calib
